W-14707131: Avoid depending on mule-integration-tests pom.xml (#777)